--- a/scenarios/web-injection-scenario.yaml
+++ b/scenarios/web-injection-scenario.yaml
@@ -1,32 +1,9 @@
-# web-injection-scenario.yaml
-# Defines the multi-container "Web Command Injection" incident
-
-services:
-  # The Blue Team's vulnerable application
-  blue-team-app:
-    # 'build' tells Docker Compose to build this image from a Dockerfile
-    build:
-      # FIX: The context is now '..' which means the parent directory (lise-project)
-      context: ..
-      dockerfile: scenarios/Dockerfile.blue
-    container_name: lise-blue-target
-    networks:
-      - simulation-net
-
-  # The Red Team's attacker machine
-  red-team-attacker:
-    build:
-      # FIX: The context is also changed here to the parent directory
-      context: ..
-      dockerfile: scenarios/Dockerfile.red
-    container_name: lise-red-attacker
-    networks:
-      - simulation-net
-    # Keep the container running in the background so we can 'exec' into it
-    tty: true
-    stdin_open: true
-
-# Defines the isolated network for this simulation
-networks:
-  simulation-net:
-    driver: bridge
+name: Web Injection Scenario
+description: A test scenario for Phase 2 Docker integration.
+teams:
+  blue:
+    name: Blue Team
+    dockerfile: ./Dockerfile.test
+  red:
+    name: Red Team
+    dockerfile: ./Dockerfile.test
